Implementações das aplicaçoes do case 2º Etapa